@@ -2346,6 +2346,21 @@ void BaseGui::initializeMenus() {
 	}
 	titles_menu->addActions( titleGroup->actions() );
 
+#if GENERIC_CHAPTER_SUPPORT
+	chapterGroup->clear(true);
+	if (core->mdat.chapters > 0) {
+		for (n=0; n < core->mdat.chapters; n++) {
+			QAction *a = new QAction(chapterGroup);
+			a->setCheckable(true);
+			a->setText( QString::number(n+1) );
+			a->setData( n + Core::firstChapter() );
+		}
+	} else {
+		QAction * a = chapterGroup->addAction( tr("<empty>") );
+		a->setEnabled(false);
+	}
+	chapters_menu->addActions( chapterGroup->actions() );
+#else
 	// DVD Chapters
 	chapterGroup->clear(true);
 	if ( (core->mdat.type == TYPE_DVD) && (core->mset.current_title_id > 0) ) {
@@ -2353,7 +2368,7 @@ void BaseGui::initializeMenus() {
 			QAction *a = new QAction(chapterGroup);
 			a->setCheckable(true);
 			a->setText( QString::number(n+1) );
-			a->setData( n + Core::dvd_first_chapter() );
+			a->setData( n + Core::dvdFirstChapter() );
 		}
 	} else {
 		// *** Matroshka chapters ***
@@ -2362,7 +2377,7 @@ void BaseGui::initializeMenus() {
 				QAction *a = new QAction(chapterGroup);
 				a->setCheckable(true);
 				a->setText( QString::number(n+1) );
-				a->setData( n + Core::mkv_first_chapter() );
+				a->setData( n + Core::firstChapter() );
 			}
 		} else {
 			QAction * a = chapterGroup->addAction( tr("<empty>") );
@@ -2370,6 +2385,7 @@ void BaseGui::initializeMenus() {
 		}
 	}
 	chapters_menu->addActions( chapterGroup->actions() );
+#endif
 
 	// Angles
 	angleGroup->clear(true);
